--- a/ApprovalSystem/Workspaces/Configuration/ConnectionString.config
+++ b/ApprovalSystem/Workspaces/Configuration/ConnectionString.config
@@ -1,7 +1,7 @@
 ﻿<connectionStrings>
   <clear />
   <add name="DefaultConnection" connectionString="Data Source=(local);initial catalog=ApprovalSystem;integrated security=True" providerName="System.Data.SqlClient" />
-  <!--<add name="DEData" connectionString="data source=(local)\SQL2012;initial catalog=GlobexBJET;Integrated Security=true"/>
-  <add name="DEMetadata" connectionString="data source=(local)\SQL2012;initial catalog=Dwkit;Integrated Security=true"/>
-  <add name="DEVersion" connectionString="data source=(local)\SQL2012;initial catalog=GlobexBJET;Integrated Security=true"/>-->
+  <!--<add name="DEData" connectionString="data source=(local);initial catalog=ApprovalSystem;Integrated Security=true"/>
+  <add name="DEMetadata" connectionString="data source=(local);initial catalog=ApprovalSystem;Integrated Security=true"/>
+  <add name="DEVersion" connectionString="data source=(local);initial catalog=ApprovalSystem;Integrated Security=true"/>-->
 </connectionStrings>
