--- a/StarterPack/OptimaJet.DWKit.StarterApplication/appsettings.json
+++ b/StarterPack/OptimaJet.DWKit.StarterApplication/appsettings.json
@@ -1,7 +1,8 @@
 ﻿{
   "DWKit": {
     "BlockMetadataChanges": false,
-    "AdminRole":  "Admins"
+    "AdminRole":  "Admins",
+    "CodeActionsDebugMode": false
   },
   "Logging": {
     "IncludeScopes": false,
@@ -9,9 +10,14 @@
       "Default": "Warning"
     }
   },
+  /*"CorsSettings": {
+      "AllowedOrigins": [
+        "*"
+      ]
+  }, */
   "ConnectionStrings": {
     /* MS SQL sample connection string */
-    "default": "Data Source=(local);Initial Catalog=dwkit;Integrated Security=False;User ID=sa;Password=1"
+    "default": "Data Source=(local);Initial Catalog=dwkit;Integrated Security=False;User ID=sa;Password=12345678"
     /* PostgreSQL sample connection string */
     /*"default": "User ID=postgres;Password=1;Host=localhost;Port=5432;Database=dwkitsample;"*/
     /* Oracle sample connection string */
