--- a/VacationRequest/OptimaJet.DWKit.StarterApplication/Optimajet.DWKit.StarterApplication.csproj
+++ b/VacationRequest/OptimaJet.DWKit.StarterApplication/Optimajet.DWKit.StarterApplication.csproj
@@ -5,7 +5,7 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <Version>2.6.0</Version>
+    <Version>2.7.0</Version>
     <Authors>OptimaJet, LLC</Authors>
     <Company>OptimaJet, LLC</Company>
     <Description>The sample for DWKit</Description>
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.3" />
@@ -27,10 +28,9 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.4.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.0.1" />
-    <PackageReference Include="React.AspNet" Version="3.2.0" />
-    <PackageReference Include="WorkflowEngine.NETCore-Core" Version="4.0.8" />
-    <PackageReference Include="WorkflowEngine.NETCore-ProviderForMSSQL" Version="4.0.8" />
-    <PackageReference Include="WorkflowEngine.NETCore-ProviderForPostgreSQL" Version="4.0.8" />
+    <PackageReference Include="WorkflowEngine.NETCore-Core" Version="4.0.9" />
+    <PackageReference Include="WorkflowEngine.NETCore-ProviderForMSSQL" Version="4.0.9" />
+    <PackageReference Include="WorkflowEngine.NETCore-ProviderForPostgreSQL" Version="4.0.9" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
